--- a/01-TableView/01-TableView/Base.lproj/Main.storyboard
+++ b/01-TableView/01-TableView/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rEP-qy-o4I">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -31,13 +31,69 @@
                             <constraint firstAttribute="trailingMargin" secondItem="qom-aG-PlQ" secondAttribute="trailing" constant="-20" id="X82-bu-n3t"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="GFO-OB-TSv"/>
                     <connections>
                         <outlet property="tableView" destination="qom-aG-PlQ" id="teW-Zi-odN"/>
+                        <segue destination="qSg-B0-8i3" kind="show" identifier="toDetailSegue" id="T3O-kW-m5J"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="305" y="389"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7jb-EF-VIY">
+            <objects>
+                <navigationController id="rEP-qy-o4I" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="EKX-HX-I2e">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="xY2-mD-Vly"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jBR-La-BAN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-550" y="389"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="GCS-F3-zLN">
+            <objects>
+                <viewController id="qSg-B0-8i3" customClass="DetailViewController" customModule="_1_TableView" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qkM-lJ-pF6"/>
+                        <viewControllerLayoutGuide type="bottom" id="YCQ-2C-wKk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7f0-yb-Plo">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFd-fc-vQx">
+                                <rect key="frame" x="270" y="202.5" width="61" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zi4-cL-09b">
+                                <rect key="frame" x="262" y="114" width="77.5" height="38.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dFd-fc-vQx" firstAttribute="top" secondItem="Zi4-cL-09b" secondAttribute="bottom" constant="50" id="6xB-76-PlD"/>
+                            <constraint firstItem="Zi4-cL-09b" firstAttribute="top" secondItem="qkM-lJ-pF6" secondAttribute="bottom" constant="50" id="71h-Q9-lRo"/>
+                            <constraint firstItem="Zi4-cL-09b" firstAttribute="centerX" secondItem="7f0-yb-Plo" secondAttribute="centerX" id="efK-Um-czq"/>
+                            <constraint firstItem="dFd-fc-vQx" firstAttribute="centerX" secondItem="7f0-yb-Plo" secondAttribute="centerX" id="yUO-pt-bUb"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uug-nu-qcX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1021" y="397"/>
         </scene>
     </scenes>
 </document>
