--- a/02-CustomClassImages/02-CustomClassImages/Base.lproj/Main.storyboard
+++ b/02-CustomClassImages/02-CustomClassImages/Base.lproj/Main.storyboard
@@ -79,7 +79,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wym-FW-jHJ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ginger" translatesAutoresizingMaskIntoConstraints="NO" id="Wym-FW-jHJ">
                                 <rect key="frame" x="20" y="280" width="240" height="128"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email" textAlignment="natural" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mqb-3H-f1F">
@@ -103,4 +103,7 @@
             <point key="canvasLocation" x="958" y="136"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ginger" width="400" height="314"/>
+    </resources>
 </document>
